static/css/common.css
html {
    background-color: #20202A;
}

.container {
    width: 100%;
    color: #FDFDFD;
    font-family: 'Lato', sans-serif;
}

header {
    height: 50px;
}

.illustration {
    width: 2036px;
    height: 971.2px;
    background-color: blue;
    position: relative;
    left: 50%;
    margin-left: -1018px;
}

.content {
    width: 80vw;
    margin: auto auto;
}

h2 {
    margin-bottom: 10px;
}

img {
    width: 100%;
}

.about_p_container {
    padding: 20px 0 40px 0;
    max-width: 500px;
    margin: auto auto;
}

.about_p {
    line-height: 1.3em;
    text-align: center;
}

.essential_btn_container {
    display: flex;
    justify-content: space-around;
    max-width: 500px;
    margin: 0 auto 40px auto;
}

.content_link {
    border: 1px solid #FDFDFD;
    color: #FDFDFD;
    border-radius: 7px;
    text-decoration: none;
    display: block;
}

.essential_btn_container a {
    width: 100px;
    height: 30px;
    font-size: .9em;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    margin: 0;
}

.resume_btn, .linkedin_btn {
    width: 100px;
    height: 50px;
}

.project_btns, .jobs_btns {
    display: grid;
    grid-template-columns: repeat( auto-fill, minmax(250px, 1fr));
    grid-gap: 20px 20px;
}

.main_btn {
    padding: 20px;
    height: 100px;
    margin: 0;
    padding: 25px;
    width: auto;
}

.main_btn h3 {
    margin-bottom: 20px;
}

.main_btn:last-child {
    margin-bottom: 50px;
}

